# airo-keyboard

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults  tasks.json  warnings.txt
components/bsp_esp32_s3_usb_otg_ev/: CMakeLists.txt  bsp_esp32_s3_usb_otg_ev.c
components/bsp_esp32_s3_usb_otg_ev/include/: bsp_esp32_s3_usb_otg_ev.h
components/ui/: CMakeLists.txt  font_8x8.h  ui_keyboard.c  ui_keyboard.h  ui_menu.c  ui_menu.h
components/usb_hid/: CMakeLists.txt  usb_hid.c  usb_hid.h
components/wifi/: CMakeLists.txt  wifi.c  wifi.h
main/: CMakeLists.txt  app_main.c  idf_component.yml
